# spot-train

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt  start.sh
docs/: control-path-separation.md  development.md  dynamic-map-design.md  field-test-log-2026-04-07.md  perception-architecture.md  spatial-awareness-design.md  viewer-design.md
profiles/approval/: default_dry_run.yaml
profiles/inspection/: lab_readiness_v1.yaml
scripts/: estop_control.py  format.sh  lint.sh  load_map.py  record_map.py  run.py  test.sh
spec/: context.md  design.md  gate-4-review.md  requirements.md  tasks.md  verification-report.md  viewer-design.md
src/spot_train/: __init__.py  config.py  ids.py  models.py  observability.py
src/spot_train/adapters/: approval.py  perception.py  spot.py
src/spot_train/agent/: __init__.py  repl.py  session.py  tools.py
src/spot_train/memory/: __init__.py  familiarity.py  map_manager.py  repository.py  schema.py
src/spot_train/perception/: __init__.py  pointcloud.py  spatial.py
tests/integration/: smoke_test.py  test_dry_run.py
tests/unit/: test_agent_tools.py  test_approval_adapter.py  test_map_manager.py  test_memory_repository.py  test_observability.py  test_operator_event_router.py  test_perception_adapter.py  test_pointcloud.py  test_ridealong_ui.py  test_schema_and_familiarity.py  test_spatial.py  test_spot_adapter.py  test_supervisor_runner.py  test_supervisor_state_machine.py  test_terminal_stop_controller.py  test_tool_contracts.py  test_tool_handlers.py  test_viewer.py
(+15 files in other folders)
